<resources>
    <string name="app_name">MPAR</string>
    <string name="NameMusic">Название песни</string>
    <string name="Author">Автор</string>
    <string name="NameFile">Название файла</string>
    <string name="Playlist">Плейлист</string>
    <string name="Chosen">Избранное</string>
    <string name="FileSystem">Файлы</string>
    <string name="Radio">Радио</string>
    <string name="Control_Color">Управление цветами</string>
    <string name="Language">Язык</string>
    <string name="Scale">Масштаб</string>
    <string name="Info">Информация</string>
    <string name="Score_audio">Количество песен:</string>
    <string name="Confirmation">Подтверждение</string>
    <string name="Delete_Audio">Вы хотите удалить эту песню?</string>
    <string name="Add_Audio_Question1">Вы хотите добавить</string>
    <string name="Add_Audio_Question2">в плейлист?</string>
    <string name="Add_Audio">Песня добавлены в плейлист</string>
    <string name="Necessary_add_audio">Необходимо добавить песню</string>
    <string name="Basic_color">Основной цвет</string>
    <string name="Additionally_color">Дополнительный цвет</string>
    <string name="Music_Player">Музыкальный плеер для прослушивания музыки и онлайн-радио</string>
    <string name="Customer">Заказчик: ФСПО ГУАП</string>
    <string name="Executor">Испольнитель: Михайлов Даниил, студент ФСПО ГУАП</string>
    <string name="QR">QR-код для связи с автором проекта</string>
    <string name="White">Белый</string>
    <string name="Black">Черный</string>
    <string name="Green">Зеленый</string>
    <string name="Orange">Оранжевый</string>
    <string name="Red">Красный</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="URL">URL</string>
    <string name="NameRadio">Название</string>
    <string name="AddNewRadio">Добавить свое радио</string>
    <string name="OK">OK</string>
    <string name="Cancel">Отмена</string>
    <string name="Internet">Отсутствует подключение к интернету</string>
    <string name="Function">Функция находится в разработке</string>
    <string name="Permission">Для дальнейшей работы необходимо разрешение</string>
</resources>