<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/basic_color"
        android:title="@string/Basic_color">
        <menu>
                <item
                    android:id="@+id/White_Color"
                    android:title="@string/White" />
                <item
                    android:id="@+id/Black_Color"
                    android:title="@string/Black" />
        </menu>
    </item>

    <item
        android:id="@+id/additionally_color"
        android:title="@string/Additionally_color">
        <menu>
                <item
                    android:id="@+id/Green_Color"
                    android:title="@string/Green" />
                <item
                    android:id="@+id/Orange_Color"
                    android:title="@string/Orange" />
                <item
                    android:id="@+id/Red_Color"
                    android:title="@string/Red" />
        </menu>
    </item>

</menu>